fixing alignment issues

--- a/hypr/components/eww/eww.scss
+++ b/hypr/components/eww/eww.scss
@@ -9,6 +9,7 @@
 .workspace_button {
     background-color: transparent;
     color: #D0EBEE;
+    padding: 4px 2px 4px 0px;
 }
 
 .rightSideModule {
@@ -25,6 +26,12 @@
     background: transparent;
     color: #D0EBEE;
     padding: 5px 0px 5px 0px;
+}
+
+.verticalIconMovedLeft {
+    background: transparent;
+    color: #D0EBEE;
+    padding: 5px 2px 5px 0px;
 }
 
 .updateUrgent {
